# sentiment_analysis_classifier

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  TODO  attention_analysis.xlsx  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  results.txt  setup.py
.bmad-core/: install-manifest.yaml
apps/: __init__.py
apps/api/: __init__.py
apps/ml-pipeline/: __init__.py
apps/ml_pipeline/: __init__.py  cli.py
apps/web/: README.md  app.py  requirements.txt
apps/web/static/: styles.css
docs/: architecture.md  brief.md  front-end-spec.md  prd.md
docs/architecture/: api-specification.md  coding-standards.md  components.md  data-models.md  deployment-architecture.md  development-workflow.md  error-handling-strategy.md  high-level-architecture.md  index.md  introduction.md  monitoring-and-observability.md  security-and-performance.md  tech-stack.md  testing-strategy.md  unified-project-structure.md
docs/deployment/: docker-setup.md
docs/prd/: epic-details.md  epic-list.md  goals-and-background-context.md  index.md  requirements.md  technical-assumptions.md  user-interface-design-goals.md
docs/qa/gates/: 1.1-project-setup.yml  1.2-basic-sentiment-classification-pipeline.yml  1.3-command-line-interface.yml  1.4-basic-docker-containerization.yml  2.1-streamlit-web-interface-foundation.yml  2.2-confidence-visualization-and-metrics.yml  2.3-explainable-ai-word-level-analysis.yml  2.4-sample-data-and-use-case-demonstrations.yml
docs/stories/: 1.1.project-setup.md  1.2.basic-sentiment-classification-pipeline.md  1.3.command-line-interface.md  1.4.basic-docker-containerization.md  2.1.streamlit-web-interface-foundation.md  2.2.confidence-visualization-and-metrics.md  2.3.explainable-ai-word-level-analysis.md  2.4.sample-data-and-use-case-demonstrations.md
scripts/docker/: build.sh  run.sh
tests/: __init__.py  conftest.py  test_attention_comparison.py  test_attention_visualization.py  test_cli.py  test_confidence_metrics.py  test_csv_export.py  test_docker.py  test_logging_config.py  test_prediction_history.py  test_sample_data.py  test_sentiment_pipeline.py  test_statistics_panel.py  test_technical_explanation.py  test_visualization_export.py  test_web_interface.py
